--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -49,6 +49,7 @@
     "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
+    "@tailwindcss/postcss": "^4.1.7",
     "@tanstack/react-virtual": "^3.13.0",
     "@types/cssbeautify": "~0.3.5",
     "@types/lodash": "~4.17.15",
@@ -62,7 +63,6 @@
     "@types/webfontloader": "~1.6.38",
     "array-move": "^4.0.0",
     "array-to-tree": "^3.3.2",
-    "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -99,7 +99,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.7",
     "tslib": "^2.8.1",
     "typescript": "5.7.3",
     "webfontloader": "^1.6.28"
