--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -65,6 +65,8 @@
     "react-dom": "^19.0.0"
   },
   "dependencies": {
+    "@iconify/json": "^2.2.346",
+    "@iconify/utils": "^2.3.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -96,6 +98,7 @@
     "fast-deep-equal": "^3.1.3",
     "free-style": "^5.0.1",
     "html-react-parser": "^5.2.2",
+    "iconify-icon": "^3.0.0",
     "lodash": "^4.17.21",
     "object-path": "^0.11.8",
     "react-color": "^2.19.3",
