feat: enhance Drawer component with improved trigger and content controls, including responsive settings and new styling options

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
       "mode": "auto"
     }
   ],
-  "cSpell.words": ["iconify", "uncategorized"]
+  "cSpell.words": ["iconify", "subcomponent", "subcomponents", "uncategorized"]
 }
