feat: enable client components and improve style management
- Updated PreviewPage to render StyleManager for applying styles.
- Added ThemeConfiguration import for theme settings.
- Marked multiple components as client components by adding "use client" directive.
- Enhanced package.json to include config imports for better module resolution.
- Improved StyleManager to return null on server-side rendering.
- Ensured all shared components are compatible with client-side rendering.

--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -31,6 +31,10 @@
       "import": "./dist/store.js",
       "types": "./dist/store/index.d.ts"
     },
+    "./config": {
+      "import": "./dist/config.js",
+      "types": "./dist/config/index.d.ts"
+    },
     "./store/selectors": {
       "import": "./dist/selectors.js",
       "types": "./dist/store/selectors.d.ts"
