Refactor and enhance builder components and types
- Removed unused imports and components from preview page.
- Updated import paths for LinkType and IconType across multiple block types.
- Refactored container components to use Position from style types.
- Changed enum declarations from `const enum` to `enum` for better compatibility.
- Removed deprecated preview configuration and core registration logic.
- Enhanced StyleManager to accept optional theme settings and improved rendering logic.
- Added builderConfig prop to various components to allow custom configuration merging.
- Updated block configuration types from EditorBlockConfig to BlockConfig for consistency.
- Improved type definitions and added new types for better clarity and structure.
- Added global environment variables to turbo.json for better configuration management.

--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,9 @@
 {
   "$schema": "https://turborepo.org/schema.json",
+  "globalEnv": [
+    "MONGODB_URI",
+    "NODE_ENV"
+  ],
   "tasks": {
     "build": {
       "dependsOn": [
