Refactor code structure for improved readability and maintainability

--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -104,6 +104,11 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@reduxjs/toolkit": "^2.5.1",
     "@tanstack/react-query": "^5.80.6",
+    "@tiptap/extension-link": "^2.23.0",
+    "@tiptap/extension-placeholder": "^2.23.0",
+    "@tiptap/pm": "^2.23.0",
+    "@tiptap/react": "^2.23.0",
+    "@tiptap/starter-kit": "^2.23.0",
     "array-move": "^4.0.0",
     "array-to-tree": "^3.3.2",
     "axios": "^1.9.0",
