--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@bprogress/next": "^3.2.12",
     "@dndbuilder.com/react": "workspace:*",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.3.5",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/postcss": "^4.1.7",
+    "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "mongodb": "^6.17.0",
@@ -33,6 +37,7 @@
     "@next/eslint-plugin-next": "^15.1.7",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.13.4",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
