feat: implement forgot and reset password functionality

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -2,10 +2,19 @@
 MONGODB_URI=
 DB_NAME=
 
+FRONTEND_URL=http://localhost:3000
+
 # JWT Configuration
 JWT_SECRET=your-secret-key-change-in-production
 JWT_EXPIRES_IN=1d
 
+# Email Configuration
+MAIL_HOST=smtp.example.com
+MAIL_PORT=587
+MAIL_SECURE=false
+MAIL_USER=user@example.com
+MAIL_PASSWORD=password
+MAIL_FROM='"No Reply" <noreply@example.com>'
+
 # Environment
 NODE_ENV=development
-
