--- a/apps/api/.env
+++ b/apps/api/.env
@@ -1,10 +1,30 @@
+# Environment
+NODE_ENV=development
+
 # Database Configuration
 MONGODB_URI=mongodb://localhost:27017
 DB_NAME=dndbuilder
+
+# Frontend Configuration
+FRONTEND_URL=http://localhost:3030
 
 # JWT Configuration
 JWT_SECRET=jwt-secret-localhost
 JWT_EXPIRES_IN=1d
 
-# Environment
-NODE_ENV=development
+# Email Configuration
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_SECURE=false
+MAIL_USER=3ddb176d8a6987
+MAIL_PASSWORD=323220c69c5e74
+MAIL_FROM='admin@dndbuilder.com'
+
+# MAIL_HOST=smtp.zoho.com
+# MAIL_PORT=465
+# MAIL_SECURE=true
+# MAIL_USER=noreply@dndbuilder.com
+# MAIL_PASSWORD=!JB5sykr6T!SJMT
+# MAIL_FROM=noreply@dndbuilder.com
+
+
