chore: update repository URL in package.json for React package

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -14,7 +14,7 @@
   "homepage": "https://dndbuilder.com/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/dndbuilder/project"
+    "url": "https://github.com/dndbuilder/react"
   },
   "keywords": [
     "react",
